<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.0</version>
        <relativePath/>
    </parent>

    <groupId>com.asc</groupId>
    <artifactId>identity</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <profiles>
        <profile>
            <id>win</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
        </profile>
    </profiles>

    <mailingLists>
        <mailingList>
            <name>support</name>
            <post>mailto:support@onlyoffice.com</post>
        </mailingList>
    </mailingLists>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/ONLYOFFICE/DocSpace/issues</url>
    </issueManagement>

    <modules>
        <module>authorization</module>
        <module>common</module>
        <module>infrastructure</module>
        <module>registration</module>
    </modules>

    <properties>
        <bucket4j.lettuce.version>8.12.1</bucket4j.lettuce.version>
        <bucket4j.version>8.10.1</bucket4j.version>
        <buildnumber.maven.plugin.version>3.1.0</buildnumber.maven.plugin.version>
        <caffeine.caching.version>3.1.7</caffeine.caching.version>
        <dependency.maven.check.plugin.version>9.2.0</dependency.maven.check.plugin.version>
        <depgraph.maven.plugin.version>4.0.3</depgraph.maven.plugin.version>
        <hazelcast.version>5.4.0</hazelcast.version>
        <jackson.version>2.13.4</jackson.version>
        <jsystemd.version>3.1.1</jsystemd.version>
        <junit.version>5.10.2</junit.version>
        <lettuce.version>6.3.1.RELEASE</lettuce.version>
        <logback.gelf.version>5.0.1</logback.gelf.version>
        <logback.logstash.version>7.4</logback.logstash.version>
        <mockito.version>5.12.0</mockito.version>
        <mysql.connector.version>8.4.0</mysql.connector.version>
        <resilience4j.version>2.2.0</resilience4j.version>
        <spring.caching.version>2.4.0</spring.caching.version>
        <spring.cloud.loadbalancer.version>4.1.2</spring.cloud.loadbalancer.version>
        <spring.cloud.openfeign.version>4.1.1</spring.cloud.openfeign.version>
        <spring.oauth2.server.version>1.3.0</spring.oauth2.server.version>
        <springdoc.version>2.2.0</springdoc.version>
        <winsw.maven.plugin.version>0.1.10</winsw.maven.plugin.version>

        <!-- Maven and Java Versions -->
        <maven.compiler.plugin.vesrion>3.13.0</maven.compiler.plugin.vesrion>
        <maven.formatter.plugin.version>2.23</maven.formatter.plugin.version>
        <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Internal Dependencies -->
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>authorization-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>authorization-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>authorization-messaging</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-messaging</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-utilities</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>infrastructure-configuration</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>infrastructure-migration-runner</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>registration-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>registration-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>registration-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>registration-messaging</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>registration-service</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Utility Dependencies -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>

        <!-- Testing Dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.vesrion}</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>${dependency.maven.check.plugin.version}</version>
                <configuration>
                    <skipProvidedScope>true</skipProvidedScope>
                </configuration>
                <executions>
                    <execution>
                        <id>run-dependency-check</id>
                        <phase>site</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.github.ferstl</groupId>
                <artifactId>depgraph-maven-plugin</artifactId>
                <version>${depgraph.maven.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>com.spotify.fmt</groupId>
                <artifactId>fmt-maven-plugin</artifactId>
                <version>${maven.formatter.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>